Fixed layout issues on desktop.

--- a/codana-time-travels/src/components/Article/Article.module.css
+++ b/codana-time-travels/src/components/Article/Article.module.css
@@ -1,13 +1,3 @@
-.link {
-    font-family: var(--font-pixel);
-    padding: 0.5rem 1rem;
-    border: 1px solid var(--black-100);
-    background-color: var(--text-color-light);
-    position: fixed;
-    right: 1rem;
-    bottom: 1rem;
-}
-
 .article {
     padding: 1rem;
     transition: filter var(--transition-medium);
@@ -43,6 +33,16 @@
         margin-top: 1rem;
         justify-content: center;
     }
+
+    .link {
+        font-family: var(--font-pixel);
+        padding: 0.5rem 1rem;
+        border: 1px solid var(--black-100);
+        background-color: var(--text-color-light);
+        display: block;
+        margin-top: 0.5rem;
+        text-align: center;
+    }
 }
 
 .blur {
@@ -68,6 +68,12 @@
             grid-row: 1 / 5;
             width: 100%;
             margin: 0;
+        }
+
+        .actions {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
         }
     }
 }
