--- a/codana-time-travels/src/components/Button/Button.module.css
+++ b/codana-time-travels/src/components/Button/Button.module.css
@@ -47,3 +47,11 @@
         translate: -105% 0;
     }
 }
+
+@media screen and (min-width: 769px) {
+    .button {
+        &.open {
+            display: none;
+        }
+    }
+}
