--- a/codana-time-travels/src/components/Forms/TimeTravelDestination/TimeTravelDestination.module.css
+++ b/codana-time-travels/src/components/Forms/TimeTravelDestination/TimeTravelDestination.module.css
@@ -56,6 +56,12 @@
             grid-template-columns: 2fr 1fr;
             border-radius: 0.5rem;
             padding-top: 0.5rem;
+            margin: 1rem;
+            translate: 0 0;
+        }
+
+        .formTitle {
+            translate: 0 0;
         }
 
         .inputs {
